RH-3496 #comment fix promise layout broken

--- a/grails-app/assets/stylesheets/sass/pages/task/promis/promisPrint.scss
+++ b/grails-app/assets/stylesheets/sass/pages/task/promis/promisPrint.scss
@@ -14,7 +14,7 @@ html,body {
 }
 
 .question-list {
-    margin: 0 0 10px 12px;
+    margin: 0 0 15px 12px;
 }
 
 .question {
@@ -26,7 +26,7 @@ html,body {
 
 .answer {
     position: relative;
-    margin-top: 2px;
+    margin-top: -1px;
 
     .text {
         font-size: 8pt;
